metadata/force-app/main/default/objects/CustomName_JmebW__c/CustomName_JmebW__c.object-meta.xml
<CustomObject>
    <description>Description_fDIKu</description>
    <label>CustomLabel_BLuJB</label>
    <nameField>
        <label>CustomLabel_BLuJB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BLuJBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>