metadata/force-app/main/default/objects/CustomName_JmebW__c/fields/CustomField_egrgV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_egrgV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgKrfB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>